fix width to keep alignment;

--- a/ember-profiler/public/css/scores.css
+++ b/ember-profiler/public/css/scores.css
@@ -2,7 +2,7 @@ dt {
   display: inline-block;
   font-size: 125%;
   font-weight: bold;
-  min-width: 125px;
+  min-width: 250px;
 }
 
 dd {
